Prevent line break in branding logotype

--- a/assets/styles/pages/search/gcse.scss
+++ b/assets/styles/pages/search/gcse.scss
@@ -61,6 +61,7 @@ div.gs-title {
     top: 0;
     right: 0;
     font-size: 1.1rem;
+    white-space: nowrap;
     color: #999;
 
     .gcsc-branding-img-noclear {
